Reusable card, applied in 'Offers'

--- a/pages/Offers.html
+++ b/pages/Offers.html
@@ -37,78 +37,78 @@
   <main class="main-offers">
     <h1 class="title">Offers</h1>
     <section class="offers">
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-6">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-8">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-9">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-10">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-11">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-12">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-6">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-8">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-9">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-10">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-11">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
+      <article class="card">
+        <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-12">
+        <p class="card__product-name">Shorts</p>
+        <p class="card__product-price">$300</p>
+        <p class="card__product-fees">3 interest-free fees of $300</p>
+      </article>
     </section>
   </main>
   <hr>
