--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css">
   <title>Cheapestore</title>
 </head>
@@ -25,7 +28,6 @@
         <img src="./images/shopping-cart-logo.png" alt="shopping-cart-logo" height="12">
       </button>
     </div>
-    <hr>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -36,81 +38,82 @@
       </ul>
     </nav>
   </header>
-  <hr>
-  <main class="main-container">
-    <section class="slider"></section>
+  <section class="slider"></section>
+  <main class="container">
     <h1 class="title">Welcome</h1>
-    <section class="categories">
-      <img class="category" src="./images/category-women.jpg" alt="category-women">
-      <img class="category" src="./images/category-men.jpg" alt="catogory-men">
-      <img class="category" src="./images/category-women-2.jpg" alt="category-men">
-      <img class="category" src="./images/category-men-2.jpg" alt="category-men">
-    </section>
-    <section class="top-offers">
-      <h2 class="title">Amazing offers!</h2>
-      <section class="offers">
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-6">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-    </section>
-    </section>
+    <div class="row">
+      <section class="categories col-12">
+        <img class="category" src="./images/category-women.jpg" alt="category-women">
+        <img class="category" src="./images/category-men.jpg" alt="catogory-men">
+        <img class="category" src="./images/category-women-2.jpg" alt="category-men">
+        <img class="category" src="./images/category-men-2.jpg" alt="category-men">
+      </section>
+      <section class="top-offers col-12">
+        <h2 class="title">Amazing offers!</h2>
+        <section class="offers">
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-6">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+        </section>
+      </section>
+    </div>
   </main>
   <hr>
   <footer class="footer">
@@ -127,8 +130,8 @@
         </article>
       </section>
       <section class="social">
-        <i class="bi bi-instagram social-item"></i>
-        <i class="bi bi-facebook social-item"></i>
+        <i class="bi bi-instagram social-item" style="font-size:30px"></i>
+        <i class="bi bi-facebook social-item" style="font-size:30px"></i>
       </section>
     </div>
     <hr>
