--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -7,8 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/style.css">
   <title>Cheapestore</title>
 </head>
@@ -23,7 +26,6 @@
         <img src="../images/shopping-cart-logo.png" alt="shopping-cart-logo" height="12">
       </button>
     </div>
-    <hr>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -34,31 +36,41 @@
       </ul>
     </nav>
   </header>
-  <hr>
-  <main>
-    <h1 class="title">Contact</h1>
-    <section class="contact">
-      <div class="contact__address">
-        <p>345 Jackson Blvd Ste 1020 Chicago
-          IL 60604-2340</p>
+  <div class="container">
+    <main>
+      <h1 class="title">Contact</h1>
+      <div class="row">
+        <section class="contact">
+          <div class=" col-4">
+            <div class="contact__address">
+              <p>345 Jackson Blvd Ste 1020 Chicago
+                IL 60604-2340</p>
+            </div>
+          </div>
+
+          <div class=" col-8">
+            <form class="contact__form" action="" method="post">
+              <div class="mb-3">
+                <label for="fullName" class="form-label">Fullname</label>
+                <input type="text" class="form-control" id="fullName">
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email">
+              </div>
+              <div class="form-group">
+                <label for="question">Question</label>
+                <textarea class="form-control" id="question" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+
+
+        </section>
       </div>
-      <form action="" method="post" class="contact__form">
-        <div>
-          <label for="fullname">Fullname</label>
-          <input type="text" id="fullname" name="fullname" placeholder="Fullname">
-        </div>
-        <div>
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" placeholder="Email" required>
-        </div>
-        <div>
-          <label for="question">Question</label>
-          <input type="text" id="question" name="question" placeholder="Question" required>
-        </div>
-        <input type="submit" id="submit" name="submit" value="Send">
-      </form>
-    </section>
-  </main>
+    </main>
+  </div>
   <hr>
   <footer class="footer">
     <div class="footer__info">
@@ -74,8 +86,8 @@
         </article>
       </section>
       <section class="social">
-        <i class="bi bi-instagram social-item"></i>
-        <i class="bi bi-facebook social-item"></i>
+        <i class="bi bi-instagram social-item" style="font-size:30px"></i>
+        <i class="bi bi-facebook social-item" style="font-size:30px"></i>
       </section>
     </div>
     <hr>
