--- a/pages/Men.html
+++ b/pages/Men.html
@@ -7,8 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/style.css">
   <title>Cheapestore</title>
 </head>
@@ -23,7 +26,6 @@
         <img src="../images/shopping-cart-logo.png" alt="shopping-cart-logo" height="12">
       </button>
     </div>
-    <hr>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -35,81 +37,81 @@
     </nav>
   </header>
   <section class="banner"></section>
-  <hr>
-  <main>
+  <main class="container">
     <h1 class="title">Men</h1>
-    <section class="offers">
-      <div class="offers__container">
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
+    <div class="row">
+      <section class="offers col-12">
+        <div class="offers__container">
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+          <article class="card">
+            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
+            <p>Shorts</p>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
+          </article>
+        </div>
+      </section>
+      <section class="brands col-12">
+        <div class="brands__item">
           <p>Shorts</p>
           <p>$300</p>
           <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
+        </div>
+        <div class="brands__item">
           <p>Shorts</p>
           <p>$300</p>
           <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
+        </div>
+        <div class="brands__item">
           <p>Shorts</p>
           <p>$300</p>
           <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
+        </div>
+        <div class="brands__item">
           <p>Shorts</p>
           <p>$300</p>
           <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </article>
-      </div>
-    </section>
-    <section class="brands">
-      <div class="brands__item">
-        <p>Shorts</p>
-        <p>$300</p>
-        <p>3 interest-free fees of $300</p>
-      </div>
-      <div class="brands__item">
-        <p>Shorts</p>
-        <p>$300</p>
-        <p>3 interest-free fees of $300</p>
-      </div>
-      <div class="brands__item">
-        <p>Shorts</p>
-        <p>$300</p>
-        <p>3 interest-free fees of $300</p>
-      </div>
-      <div class="brands__item">
-        <p>Shorts</p>
-        <p>$300</p>
-        <p>3 interest-free fees of $300</p>
-      </div>
-    </section>
-    <section class="announcements">
-      <div class="announcements__item">
-        <p>6 interest-free fees</p>
-        <p>All banks</p>
-      </div>
-      <div class="announcements__item">
-        <p>Shipping all over the country</p>
-        <p>Calculate your shipment!</p>
-      </div>
-    </section>
+        </div>
+      </section>
+      <section class="announcements row">
+        <div class="announcements__item">
+          <p>6 interest-free fees</p>
+          <p>All banks</p>
+        </div>
+        <div class="announcements__item">
+          <p>Shipping all over the country</p>
+          <p>Calculate your shipment!</p>
+        </div>
+      </section>
   </main>
   <hr>
   <footer class="footer">
@@ -126,8 +128,8 @@
         </article>
       </section>
       <section class="social">
-        <i class="bi bi-instagram social-item"></i>
-        <i class="bi bi-facebook social-item"></i>
+        <i class="bi bi-instagram social-item" style="font-size:30px"></i>
+        <i class="bi bi-facebook social-item" style="font-size:30px"></i>
       </section>
     </div>
     <hr>
