Update style header and background. Change card icon

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <button>Login</button>
       <button>
-        <img src="./images/shopping-cart-logo.png" alt="shopping-cart-logo" height="12">
+        <i class="bi bi-cart" alt="shopping-cart-logo" height="12"></i>
       </button>
     </div>
     <nav>
