Color palette. Added copyright icon. Horizontal scroll cards based on swiperjs

--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
       </section>
     </div>
   </main>
-  <hr>
   <footer class="footer">
     <div class="footer__info">
       <section class="methods">
@@ -131,9 +130,8 @@
         <i class="bi bi-facebook social-item" style="font-size:30px"></i>
       </section>
     </div>
-    <hr>
     <section class="footer__copyright">
-      Cheapestore 2022 | All rights reserved
+      <i class="bi bi-c-circle"></i> Cheapestore 2022 | All rights reserved
     </section>
   </footer>
 
