--- a/pages/Men.html
+++ b/pages/Men.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!-- Link Swiper's CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="../css/style.css">
   <title>Cheapestore</title>
 </head>
@@ -36,81 +38,111 @@
   <section class="banner"></section>
   <main class="container">
     <h1 class="title">Men</h1>
-    <div class="row">
-      <section class="offers col-12">
-        <div class="offers__container">
-          <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
-            <p>Shorts</p>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
-            <p>Shorts</p>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
-            <p>Shorts</p>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
-            <p>Shorts</p>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-            <p>Shorts</p>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-          <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-            <p>Shorts</p>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
-          </article>
-        </div>
-      </section>
-      <section class="brands col-12">
-        <div class="brands__item">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </div>
-        <div class="brands__item">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </div>
-        <div class="brands__item">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </div>
-        <div class="brands__item">
-          <p>Shorts</p>
-          <p>$300</p>
-          <p>3 interest-free fees of $300</p>
-        </div>
-      </section>
-      <section class="announcements row">
-        <div class="announcements__item">
-          <p>6 interest-free fees</p>
-          <p>All banks</p>
-        </div>
-        <div class="announcements__item">
-          <p>Shipping all over the country</p>
-          <p>Calculate your shipment!</p>
-        </div>
-      </section>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <section class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <article class="swiper-slide">
+          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="cardd-description">
+            <div>
+              <p>Shorts</p>
+            </div>
+            <div>
+              <p>$300</p>
+            </div>
+            <div>
+              <p>3 interest-free fees of $300</p>
+            </div>
+          </div>
+        </article>
+        <article class="swiper-slide">
+          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="cardd-description">
+            <div>
+              <p>Shorts</p>
+            </div>
+            <div>
+              <p>$300</p>
+            </div>
+            <div>
+              <p>3 interest-free fees of $300</p>
+            </div>
+          </div>
+        </article>
+        <article class="swiper-slide">
+          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="cardd-description">
+            <div>
+              <p>Shorts</p>
+            </div>
+            <div>
+              <p>$300</p>
+            </div>
+            <div>
+              <p>3 interest-free fees of $300</p>
+            </div>
+          </div>
+        </article>
+        <article class="swiper-slide">
+          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="cardd-description">
+            <div>
+              <p>Shorts</p>
+            </div>
+            <div>
+              <p>$300</p>
+            </div>
+            <div>
+              <p>3 interest-free fees of $300</p>
+            </div>
+          </div>
+        </article>
+        <article class="swiper-slide">
+          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="cardd-description">
+            <div>
+              <p>Shorts</p>
+            </div>
+            <div>
+              <p>$300</p>
+            </div>
+            <div>
+              <p>3 interest-free fees of $300</p>
+            </div>
+          </div>
+        </article>
+        <article class="swiper-slide">
+          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="cardd-description">
+            <div>
+              <p>Shorts</p>
+            </div>
+            <div>
+              <p>$300</p>
+            </div>
+            <div>
+              <p>3 interest-free fees of $300</p>
+            </div>
+          </div>
+        </article>
+        <article class="swiper-slide">
+          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="cardd-description">
+            <div>
+              <p>Shorts</p>
+            </div>
+            <div>
+              <p>$300</p>
+            </div>
+            <div>
+              <p>3 interest-free fees of $300</p>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
   </main>
-  <hr>
   <footer class="footer">
     <div class="footer__info">
       <section class="methods">
@@ -129,15 +161,50 @@
         <i class="bi bi-facebook social-item" style="font-size:30px"></i>
       </section>
     </div>
-    <hr>
     <section class="footer__copyright">
-      Cheapestore 2022 | All rights reserved
+      <i class="bi bi-c-circle"></i> Cheapestore 2022 | All rights reserved
     </section>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-  crossorigin="anonymous"></script>
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+
+  <!-- Swiper - Start -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <script>
+    var swiper = new Swiper('.mySwiper', {
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev'
+      },
+      slidesPerView: 1,
+      spaceBetween: 10,
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      breakpoints: {
+        620: {
+          slidesPerView: 1,
+          spaceBetween: 20,
+        },
+        680: {
+          slidesPerView: 2,
+          spaceBetween: 40,
+        },
+        920: {
+          slidesPerView: 3,
+          spaceBetween: 40,
+        },
+        1240: {
+          slidesPerView: 4,
+          spaceBetween: 50,
+        },
+      }
+    });
+  </script>
+  <!-- Swiper - End -->
 </body>
 
 </html>
