--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -68,7 +68,6 @@
       </div>
     </main>
   </div>
-  <hr>
   <footer class="footer">
     <div class="footer__info">
       <section class="methods">
@@ -87,9 +86,8 @@
         <i class="bi bi-facebook social-item" style="font-size:30px"></i>
       </section>
     </div>
-    <hr>
     <section class="footer__copyright">
-      Cheapestore 2022 | All rights reserved
+      <i class="bi bi-c-circle"></i> Cheapestore 2022 | All rights reserved
     </section>
   </footer>
 
