--- a/pages/Offers.html
+++ b/pages/Offers.html
@@ -113,7 +113,6 @@
       </section>
     </div>
   </main>
-  <hr>
   <footer class="footer">
     <div class="footer__info">
       <section class="methods">
@@ -132,9 +131,8 @@
         <i class="bi bi-facebook social-item" style="font-size:30px"></i>
       </section>
     </div>
-    <hr>
     <section class="footer__copyright">
-      Cheapestore 2022 | All rights reserved
+      <i class="bi bi-c-circle"></i> Cheapestore 2022 | All rights reserved
     </section>
   </footer>
 
