Restoring brands and announcements

--- a/pages/Men.html
+++ b/pages/Men.html
@@ -43,8 +43,8 @@
     <section class="swiper mySwiper">
       <div class="swiper-wrapper">
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -57,8 +57,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -71,8 +71,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -85,8 +85,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -99,8 +99,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -113,8 +113,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -127,8 +127,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -140,6 +140,38 @@
             </div>
           </div>
         </article>
+      </div>
+    </section>
+    <section class="brands">
+      <div class="brands__item">
+        <p>Shorts</p>
+        <p>$300</p>
+        <p>3 interest-free fees of $300</p>
+      </div>
+      <div class="brands__item">
+        <p>Shorts</p>
+        <p>$300</p>
+        <p>3 interest-free fees of $300</p>
+      </div>
+      <div class="brands__item">
+        <p>Shorts</p>
+        <p>$300</p>
+        <p>3 interest-free fees of $300</p>
+      </div>
+      <div class="brands__item">
+        <p>Shorts</p>
+        <p>$300</p>
+        <p>3 interest-free fees of $300</p>
+      </div>
+    </section>
+    <section class="announcements">
+      <div class="announcements__item">
+        <p>6 interest-free fees</p>
+        <p>All banks</p>
+      </div>
+      <div class="announcements__item">
+        <p>Shipping all over the country</p>
+        <p>Calculate your shipment!</p>
       </div>
     </section>
   </main>
