--- a/pages/Women.html
+++ b/pages/Women.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-      <!-- Link Swiper's CSS -->
+  <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="../css/style.css">
   <title>Cheapestore</title>
@@ -43,8 +43,8 @@
     <section class="swiper mySwiper">
       <div class="swiper-wrapper">
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -57,8 +57,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -71,8 +71,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -85,8 +85,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -99,8 +99,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -113,8 +113,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -127,8 +127,8 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="cardd-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
-          <div class="cardd-description">
+          <img class="swiper-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
+          <div class="swiper-description">
             <div>
               <p>Shorts</p>
             </div>
@@ -140,6 +140,38 @@
             </div>
           </div>
         </article>
+      </div>
+    </section>
+    <section class="brands">
+      <div class="brands__item">
+        <p>Dress</p>
+        <p>$300</p>
+        <p>3 interest-free fees of $300</p>
+      </div>
+      <div class="brands__item">
+        <p>Dress</p>
+        <p>$300</p>
+        <p>3 interest-free fees of $300</p>
+      </div>
+      <div class="brands__item">
+        <p>Dress</p>
+        <p>$300</p>
+        <p>3 interest-free fees of $300</p>
+      </div>
+      <div class="brands__item">
+        <p>Dress</p>
+        <p>$300</p>
+        <p>3 interest-free fees of $300</p>
+      </div>
+    </section>
+    <section class="announcements">
+      <div class="announcements__item">
+        <p>6 interest-free fees</p>
+        <p>All banks</p>
+      </div>
+      <div class="announcements__item">
+        <p>Shipping all over the country</p>
+        <p>Calculate your shipment!</p>
       </div>
     </section>
   </main>
@@ -167,43 +199,43 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-  crossorigin="anonymous"></script>
-   <!-- Swiper - Start -->
-   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-   <script>
-     var swiper = new Swiper('.mySwiper', {
-       navigation: {
-         nextEl: '.swiper-button-next',
-         prevEl: '.swiper-button-prev'
-       },
-       slidesPerView: 1,
-       spaceBetween: 10,
-       pagination: {
-         el: '.swiper-pagination',
-         clickable: true,
-       },
-       breakpoints: {
-         620: {
-           slidesPerView: 1,
-           spaceBetween: 20,
-         },
-         680: {
-           slidesPerView: 2,
-           spaceBetween: 40,
-         },
-         920: {
-           slidesPerView: 3,
-           spaceBetween: 40,
-         },
-         1240: {
-           slidesPerView: 4,
-           spaceBetween: 50,
-         },
-       }
-     });
-   </script>
-   <!-- Swiper - End -->
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+  <!-- Swiper - Start -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <script>
+    var swiper = new Swiper('.mySwiper', {
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev'
+      },
+      slidesPerView: 1,
+      spaceBetween: 10,
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      breakpoints: {
+        620: {
+          slidesPerView: 1,
+          spaceBetween: 20,
+        },
+        680: {
+          slidesPerView: 2,
+          spaceBetween: 40,
+        },
+        920: {
+          slidesPerView: 3,
+          spaceBetween: 40,
+        },
+        1240: {
+          slidesPerView: 4,
+          spaceBetween: 50,
+        },
+      }
+    });
+  </script>
+  <!-- Swiper - End -->
 </body>
 
 </html>
