--- a/pages/Men.html
+++ b/pages/Men.html
@@ -204,39 +204,9 @@
 
   <!-- Swiper - Start -->
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-  <script>
-    var swiper = new Swiper('.mySwiper', {
-      navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev'
-      },
-      slidesPerView: 1,
-      spaceBetween: 10,
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
-      },
-      breakpoints: {
-        620: {
-          slidesPerView: 1,
-          spaceBetween: 20,
-        },
-        680: {
-          slidesPerView: 2,
-          spaceBetween: 40,
-        },
-        920: {
-          slidesPerView: 3,
-          spaceBetween: 40,
-        },
-        1240: {
-          slidesPerView: 4,
-          spaceBetween: 50,
-        },
-      }
-    });
-  </script>
-  <!-- Swiper - End -->
+
+  <script src="../js/swiper.js"></script>
+
 </body>
 
 </html>
