Added general SEO

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="In Cheapestore you'll find in one place all the clothes you need, name it we have">
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -15,7 +16,7 @@
   <!--<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">-->
   <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-  <title>Cheapestore</title>
+  <title>Cheapestore | Home</title>
 </head>
 
 <body>
@@ -40,6 +41,8 @@
     </nav>
   </header>
 
+  <h1 class="clipped">Cheapestore</h1>
+
   <div id="myCarousel" class="carousel slide" data-interval="6500" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -50,21 +53,21 @@
       <div class="active item carousel-fade">
         <img class="d-block w-100" src="./images/banner.gif" alt="">
         <div class="carousel-caption">
-          <h3>First slide label</h3>
+          <h2>First slide label</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
       </div>
       <div class="item carousel-fade">
         <img class="d-block w-100" src="./images/banner.gif" alt="">
         <div class="carousel-caption">
-          <h3>Second slide label</h3>
+          <h2>Second slide label</h2>
           <p>Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
         </div>
       </div>
       <div class="item carousel-fade">
         <img class="d-block w-100" src="./images/banner.gif" alt="">
         <div class="carousel-caption">
-          <h3>Third slide label</h3>
+          <h2>Third slide label</h2>
           <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
       </div>
@@ -78,7 +81,6 @@
   </div>
 
   <main class="container">
-    <h1 class="title">Welcome</h1>
     <div class="row">
       <section class="categories col-12">
         <img class="category" src="./images/category-women.jpg" alt="category-women">
@@ -91,61 +93,61 @@
         <section class="offers">
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-6">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
             <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-            <p>Shorts</p>
+            <h3>Shorts</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
@@ -158,12 +160,12 @@
       <section class="methods">
         <article class="methods__payment">
           <h3>Payment Methods</h3>
-          <p>VISA</p>
-          <p>MERCADOPAGO</p>
+          <h4>VISA</h4>
+          <h4>MERCADOPAGO</h4>
         </article>
         <article class="methods_shipping">
           <h3>Shipping</h3>
-          <p>CORREO ARGENTINO</p>
+          <h4>CORREO ARGENTINO</h4>
         </article>
       </section>
       <section class="social">
