--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="If you have any question or need help please contact us">
   <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
-  <title>Cheapestore</title>
+  <title>Cheapestore | Contact</title>
 </head>
 
 <body>
@@ -33,14 +34,15 @@
       </ul>
     </nav>
   </header>
+  <h1 class="clipped">Cheapestore</h1>
   <div class="container">
     <main>
-      <h1 class="title">Contact</h1>
+      <h2 class="title">Contact</h2>
       <div class="row">
         <section class="contact">
           <div class=" col-4">
             <div class="contact__address">
-              <p>345 Jackson Blvd Ste 1020 Chicago
+              <p style="padding: 50px">345 Jackson Blvd Ste 1020 Chicago
                 IL 60604-2340</p>
             </div>
           </div>
@@ -55,11 +57,13 @@
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email">
               </div>
-              <div class="form-group">
+              <div class="mb-3 form-group">
                 <label for="question">Question</label>
                 <textarea class="form-control" id="question" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
             </form>
           </div>
 
@@ -72,12 +76,12 @@
       <section class="methods">
         <article class="methods__payment">
           <h3>Payment Methods</h3>
-          <p>VISA</p>
-          <p>MERCADOPAGO</p>
+          <h4>VISA</h4>
+          <h4>MERCADOPAGO</h4>
         </article>
         <article class="methods_shipping">
           <h3>Shipping</h3>
-          <p>CORREO ARGENTINO</p>
+          <h4>CORREO ARGENTINO</h4>
         </article>
       </section>
       <section class="social">
