--- a/pages/Men.html
+++ b/pages/Men.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Not only women clothes, find what you are looking for">
   <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,7 +13,7 @@
   <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="../css/style.css">
-  <title>Cheapestore</title>
+  <title>Cheapestore | Men</title>
 </head>
 
 <body>
@@ -35,9 +36,10 @@
       </ul>
     </nav>
   </header>
+  <h1 class="clipped">Cheapestore</h1>
   <section class="banner"></section>
   <main class="container">
-    <h1 class="title">Men</h1>
+    <h2 class="title">Men</h2>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
     <section class="swiper mySwiper">
@@ -46,7 +48,7 @@
           <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <p>Shorts</p>
+              <h3>Shorts</h3>
             </div>
             <div>
               <p>$300</p>
@@ -60,7 +62,7 @@
           <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <p>Shorts</p>
+              <h3>Shorts</h3>
             </div>
             <div>
               <p>$300</p>
@@ -74,7 +76,7 @@
           <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <p>Shorts</p>
+              <h3>Shorts</h3>
             </div>
             <div>
               <p>$300</p>
@@ -88,7 +90,7 @@
           <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <p>Shorts</p>
+              <h3>Shorts</h3>
             </div>
             <div>
               <p>$300</p>
@@ -102,7 +104,7 @@
           <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <p>Shorts</p>
+              <h3>Shorts</h3>
             </div>
             <div>
               <p>$300</p>
@@ -116,7 +118,7 @@
           <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <p>Shorts</p>
+              <h3>Shorts</h3>
             </div>
             <div>
               <p>$300</p>
@@ -130,7 +132,7 @@
           <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <p>Shorts</p>
+              <h3>Shorts</h3>
             </div>
             <div>
               <p>$300</p>
@@ -144,34 +146,34 @@
     </section>
     <section class="brands">
       <div class="brands__item">
-        <p>Shorts</p>
+        <h3>Shorts</h3>
         <p>$300</p>
         <p>3 interest-free fees of $300</p>
       </div>
       <div class="brands__item">
-        <p>Shorts</p>
+        <h3>Shorts</h3>
         <p>$300</p>
         <p>3 interest-free fees of $300</p>
       </div>
       <div class="brands__item">
-        <p>Shorts</p>
+        <h3>Shorts</h3>
         <p>$300</p>
         <p>3 interest-free fees of $300</p>
       </div>
       <div class="brands__item">
-        <p>Shorts</p>
+        <h3>Shorts</h3>
         <p>$300</p>
         <p>3 interest-free fees of $300</p>
       </div>
     </section>
     <section class="announcements">
       <div class="announcements__item">
-        <p>6 interest-free fees</p>
-        <p>All banks</p>
+        <h3>6 interest-free fees</h3>
+        <h3>All banks</h3>
       </div>
       <div class="announcements__item">
-        <p>Shipping all over the country</p>
-        <p>Calculate your shipment!</p>
+        <h3>Shipping all over the country</h3>
+        <h3>Calculate your shipment!</h3>
       </div>
     </section>
   </main>
@@ -180,12 +182,12 @@
       <section class="methods">
         <article class="methods__payment">
           <h3>Payment Methods</h3>
-          <p>VISA</p>
-          <p>MERCADOPAGO</p>
+          <h4>VISA</h4>
+          <h4>MERCADOPAGO</h4>
         </article>
         <article class="methods_shipping">
           <h3>Shipping</h3>
-          <p>CORREO ARGENTINO</p>
+          <h4>CORREO ARGENTINO</h4>
         </article>
       </section>
       <section class="social">
