--- a/pages/Offers.html
+++ b/pages/Offers.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="All the offers you need, stop wasting your money!">
   <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
-  <title>Cheapestore</title>
+  <title>Cheapestore | Offers</title>
 </head>
 
 <body>
@@ -33,80 +34,81 @@
       </ul>
     </nav>
   </header>
+  <h1 class="clipped">Cheapestore</h1>
   <section class="banner"></section>
   <main class="container">
-    <h1 class="title">Offers</h1>
+    <h2 class="title">Offers</h2>
     <div class="row">
       <section class="offers col-12">
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-6">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-8">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-9">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-10">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-11">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
           <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-12">
-          <p class="card__product-name">Shorts</p>
+          <h3 class="card__product-name">Shorts</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
@@ -118,12 +120,12 @@
       <section class="methods">
         <article class="methods__payment">
           <h3>Payment Methods</h3>
-          <p>VISA</p>
-          <p>MERCADOPAGO</p>
+          <h4>VISA</h4>
+          <h4>MERCADOPAGO</h4>
         </article>
         <article class="methods_shipping">
           <h3>Shipping</h3>
-          <p>CORREO ARGENTINO</p>
+          <h4>CORREO ARGENTINO</h4>
         </article>
       </section>
       <section class="social">
