Update clothes names. Update images

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <meta name="description" content="In Cheapestore you'll find in one place all the clothes you need, name it we have">
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://getbootstrap.com/docs/5.2/assets/css/docs.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>Cheapestore | Home</title>
 </head>
@@ -79,71 +80,71 @@
   <main class="container">
     <div class="row">
       <section class="categories col-12">
-        <img class="category" src="./images/category-women.jpg" alt="category-women">
-        <img class="category" src="./images/category-men.jpg" alt="catogory-men">
-        <img class="category" src="./images/category-women-2.jpg" alt="category-men">
-        <img class="category" src="./images/category-men-2.jpg" alt="category-men">
+        <img class="category" src="./images/women/gardener-clothes.jpg" alt="category-women">
+        <img class="category" src="./images/men/black&white-stripes.jpg" alt="catogory-men">
+        <img class="category" src="./images/men/black-shoes.jpg" alt="category-men">
+        <img class="category" src="./images/women/faux-fur-scarf.jpg" alt="category-men">
       </section>
       <section class="top-offers col-12">
         <h2 class="title">Amazing offers!</h2>
         <section class="offers">
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/men/squared-shirt.jpg" alt="offer-mockup-1">
+            <h3>GG Marmont reversible belt</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/women/short.jpg" alt="offer-mockup-2">
+            <h3>Waisted Smokin' Short Fray</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/men/squared-coat.jpg" alt="offer-mockup-3">
+            <h3>Orange Stripe's Squared Coat</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/women/modern-jean.jpg" alt="offer-mockup-4">
+            <h3>Jeans In Vintage Mid Blue</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/men/short-shirt.jpg" alt="offer-mockup-5">
+            <h3>Regular Fit Ellerslie Linen Shirt</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-6">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-6">
+            <h3>Striped Print T-Shirt</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/men/brooklyn-jacket.jpg" alt="offer-mockup-7">
+            <h3>Classic Brooklyn Red Jacket</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/women/jean.jpg" alt="offer-mockup-7">
+            <h3>Jeans In Mid Blue With Rips</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/men/black-shoes.jpg" alt="offer-mockup-7">
+            <h3>Black Leather's Classic Chelsea Boot</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
           <article class="card">
-            <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-            <h3>Shorts</h3>
+            <img class="card__picture" src="../images/women/gardener-clothes.jpg" alt="offer-mockup-7">
+            <h3>Vintage Blue Pocket Overall</h3>
             <p>$300</p>
             <p>3 interest-free fees of $300</p>
           </article>
