--- a/pages/Men.html
+++ b/pages/Men.html
@@ -46,10 +46,10 @@
     <section class="swiper mySwiper">
       <div class="swiper-wrapper">
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Men/black&white-stripes.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/men/black&white-stripes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Shorts</h3>
+              <h3>Black & White Stripes Shirt</h3>
             </div>
             <div>
               <p>$300</p>
@@ -60,10 +60,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Men/black-shoes.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/men/black-shoes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Shorts</h3>
+              <h3>Black Leather's Classic Chelsea Boot</h3>
             </div>
             <div>
               <p>$300</p>
@@ -74,10 +74,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Men/brooklyn-jacket.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/men/brooklyn-jacket.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Shorts</h3>
+              <h3>Classic Brooklyn Red Jacket</h3>
             </div>
             <div>
               <p>$300</p>
@@ -88,10 +88,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Men/short-shirt.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/men/short-shirt.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Shorts</h3>
+              <h3>Regular Fit Ellerslie Linen Shirt</h3>
             </div>
             <div>
               <p>$300</p>
@@ -102,10 +102,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Men/squared-coat.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/men/squared-coat.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Shorts</h3>
+              <h3>Orange Stripe's Squared Coat</h3>
             </div>
             <div>
               <p>$300</p>
@@ -116,10 +116,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Men/squared-shirt.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/men/squared-shirt.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Shorts</h3>
+              <h3>GG Marmont reversible belt</h3>
             </div>
             <div>
               <p>$300</p>
@@ -130,10 +130,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/men/casual-white-sweater.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Shorts</h3>
+              <h3>Casual White Sweater</h3>
             </div>
             <div>
               <p>$300</p>
