--- a/pages/Women.html
+++ b/pages/Women.html
@@ -46,10 +46,10 @@
     <section class="swiper mySwiper">
       <div class="swiper-wrapper">
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Women/brown-outfit.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/brown-outfit.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Dress</h3>
+              <h3>Mid Season Brown Set</h3>
             </div>
             <div>
               <p>$300</p>
@@ -60,10 +60,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Women/gardener-clothes.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/gardener-clothes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Dress</h3>
+              <h3>Vintage Blue Pocket Overall</h3>
             </div>
             <div>
               <p>$300</p>
@@ -74,10 +74,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Women/jean.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/jean.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Dress</h3>
+              <h3>Jeans In Mid Blue With Rips</h3>
             </div>
             <div>
               <p>$300</p>
@@ -88,10 +88,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Women/knotted-shirt.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Dress</h3>
+              <h3>Striped Print T-Shirt</h3>
             </div>
             <div>
               <p>$300</p>
@@ -102,10 +102,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Women/modern-jean.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/modern-jean.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Dress</h3>
+              <h3>Jeans In Vintage Mid Blue</h3>
             </div>
             <div>
               <p>$300</p>
@@ -116,10 +116,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/Women/short.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/short.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Dress</h3>
+              <h3>Waisted Smokin' Short Fray</h3>
             </div>
             <div>
               <p>$300</p>
@@ -130,10 +130,10 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/offer-women.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/faux-fur-scarf.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
-              <h3>Dress</h3>
+              <h3>Faux Fur Scarf</h3>
             </div>
             <div>
               <p>$300</p>
