--- a/pages/Offers.html
+++ b/pages/Offers.html
@@ -42,74 +42,74 @@
     <div class="row">
       <section class="offers col-12">
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-1">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/women/gardener-clothes.jpg" alt="offer-mockup-1">
+          <h3 class="card__product-name">Vintage Blue Pocket Overall</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-2">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/men/black&white-stripes.jpg" alt="offer-mockup-2">
+          <h3 class="card__product-name">Black & White Stripes Shirt</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-3">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/women/jean.jpg" alt="offer-mockup-3">
+          <h3 class="card__product-name">Jeans In Mid Blue With Rips</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-4">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/men/black-shoes.jpg" alt="offer-mockup-4">
+          <h3 class="card__product-name">Black Leather's Classic Chelsea Boot</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-5">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-5">
+          <h3 class="card__product-name">Striped Print T-Shirt</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-6">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/men/brooklyn-jacket.jpg" alt="offer-mockup-6">
+          <h3 class="card__product-name">Classic Brooklyn Red Jacket</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-7">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/women/modern-jean.jpg" alt="offer-mockup-7">
+          <h3 class="card__product-name">Jeans In Vintage Mid Blue</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-8">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/men/short-shirt.jpg" alt="offer-mockup-8">
+          <h3 class="card__product-name">Regular Fit Ellerslie Linen Shirt</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-9">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/women/short.jpg" alt="offer-mockup-9">
+          <h3 class="card__product-name">Waisted Smokin' Short Fray</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-10">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/men/squared-coat.jpg" alt="offer-mockup-10">
+          <h3 class="card__product-name">Orange Stripe's Squared Coat</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-11">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/women/faux-fur-scarf.jpg" alt="offer-mockup-11">
+          <h3 class="card__product-name">Faux Fur Scarf</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
         <article class="card">
-          <img class="card__picture" src="../images/offer-men.jpg" alt="offer-mockup-12">
-          <h3 class="card__product-name">Shorts</h3>
+          <img class="card__picture" src="../images/men/squared-shirt.jpg" alt="offer-mockup-12">
+          <h3 class="card__product-name">GG Marmont reversible belt</h3>
           <p class="card__product-price">$300</p>
           <p class="card__product-fees">3 interest-free fees of $300</p>
         </article>
